@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-08T08:10:08Z",
+  "timestamp" : "2022-05-09T00:40:23Z",
   "count_outdated" : 17,
   "uniques_outdated" : 12,
-  "count" : 26,
-  "uniques" : 20,
+  "count" : 27,
+  "uniques" : 21,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -28,10 +28,10 @@
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ]
+      "count": 5,
+      "count_minmax": [ 4, 5 ],
+      "uniques": 4,
+      "uniques_minmax": [ 3, 4 ]
     }
   ]
 }
