@@ -1,3 +1,9 @@
+2022-05-09T00:40:23Z:
+* notice: last 14d: all unq: 10 6
+* notice: prev accum: outdated-all outdated-unq / all unq: 17 12 / 26 20
+* notice: next accum: outdated-all outdated-unq / all unq: 17 12 / 27 21
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-05-08T08:10:08Z:
 * notice: last 14d: all unq: 9 6
 * notice: prev accum: outdated-all outdated-unq / all unq: 17 12 / 22 17
